css/base.css
/* --------------------------------------------- */
/* Variables */
/* --------------------------------------------- */
:root {
  /* font size */
  --font-size-regular: 16px;
  --font-size-medium: 18px;
  --font-size-header: 24px;
  --font-size-text: 14px;
  --font-size-small: 12px;

  /* color */
  --brand-color: #009b3e;
  --theme-color-primary: #3fb93b;
  --theme-color-dark: #005335;
  --theme-color-red: #ed1b25;
  --title-color: #191d20;
  --sub-title-color: #585858;
  --text-color: #868686;
  --text-color-white: #ffffff;
  --text-color-light-gray: #9b9b9b;

  --body-bg: #f1f1f1;
  --section-bg: #ffffff;
  --seconday-bg: #143d69;
  --footer-bg: #262830;
  --disabled-btn-bg: #d1d1d1;

  --social-links-color: #87898C;
  --light-border-color: #e1e1e1;
  --lighter-border-color: #f1f1f1;

  --font-regular: 'Proxima Nova', Georgia, sans-serif;
  --font-light: 'proxima_nova_ltthin', Georgia, sans-serif;
  --font-medium: 'proxima_nova_ltsemibold', Georgia, sans-serif;
  --font-bold: 'proxima_nova_altbold', Georgia, sans-serif;
  --font-black: 'proxima_nova_altblack', Georgia, sans-serif;

  --section-box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.05);
}

/* --------------------------------------------- */
/* General */
/* --------------------------------------------- */
body {
  background-color: var(--body-bg);
  font-family: var(--font-regular);
}
@media screen and (max-width: 768px) {
}

/* --------------------------------------------- */
/* helper */
/* --------------------------------------------- */
.no-outline:focus, .no-outline:active {
  outline: none;
  box-shadow: none;
}
.bb-lighter {
  border-bottom: 1px solid var(--lighter-border-color);
}
.theme-btn {
  background-color: var(--theme-color-primary);
  color: var(--text-color-white);
  border: none;
}
.gallery-items {
  cursor: zoom-in;
}

/* --------------------------------------------- */
/* custom elements */
/* --------------------------------------------- */
/* theme select */
.theme-select {
  display: inline-block;
  position: relative;
  width: 100%;
}
.theme-select select {
  padding: 12px 20px; 
  -webkit-appearance: none;
  -moz-appearance: none;
  text-indent: 1px;
  text-overflow: '';
  padding-right: 36px;
  width: 100%;
  border: 1px solid var(--lighter-border-color);
  border-radius: 4px;
}
.theme-select select::placeholder {
  color: var(--text-color-light-gray);
}
.theme-select .theme-down-arrow {
  position: absolute;
  right: 16px;
  top: 12px;
  pointer-events: none;
}
.theme-select .theme-down-arrow i {
  font-size: 10px;
  color: var(--text-color-light-gray);
}

@media screen and (max-width: 768px) {
  .theme-select select {
    padding: 10px 16px; 
    border: 1px solid var(--light-border-color);
  }
}
/* theme input */
.theme-input {
  padding: 12px 20px; 
  border: 1px solid var(--lighter-border-color);
  border-radius: 4px;
  width: 100%;
}
@media screen and (max-width: 768px) {
  .theme-input {
    padding: 10px 16px; 
    border: 1px solid var(--light-border-color);
  }
}
/* theme button */
.theme-btn {
  background: var(--theme-color-primary);
  color: var(--text-color-white);
  padding: 12px 10px;
  font-family: var(--font-bold);
}
@media screen and (max-width: 768px) {
  .theme-btn {
    padding: 10px 16px; 
  }
}

.see-more-btn{
  color: var(--text-color);
}
.see-more-btn:hover, .see-more-btn:active {
  color: var(--theme-color-primary);
}
.side-col-see-more-btn {
  display: block;
  color: var(--text-color);
  margin: 0px 15px 30px 15px;
}
.side-col-see-more-btn:hover, .side-col-see-more-btn:focus, .side-col-see-more-btn:active {
  text-decoration: none;
  color: var(--theme-color-primary);
}

/* --------------------------------------------- */
/* navigation */
/* --------------------------------------------- */

/* bootstrap modification */
.navbar {
  position: relative;
  background-color: var(--section-bg);
  padding-top: 20px;
  padding-bottom: 20px;
}
.navbar-brand-centered {
  position: absolute;
  top: 10px;
  left: calc(50% - 54px);
}

/* custom style */
#logo {
  height: 59px;
  width: auto;
}
.mims-nav-link {
  text-transform: uppercase;
  color: #3d3d3d !important;
  font-size: var(--font-size-medium);
  padding: 10px 30px !important;
  font-family: var(--font-bold);
}
.mims-nav-link.home-link {
  margin-left: 120px !important;
}
.mims-nav-link.active {
  color: var(--brand-color) !important;
}
.left-links, .right-links {
  position: absolute;
  top: 30px;
}
.left-links a:hover, .right-links a:hover {
  color: var(--theme-color-primary);
}
.left-links {
  left: 24px;
}
.right-links {
  right: 24px;
}
.side-link {
  color: var(--social-links-color);
  font-size: var(--font-size-medium);
  margin: 0 3px;
}
#navbarSearch {
  position: absolute;
}
#navbarSearch .navbar-search {
  display: none !important;
  margin: 24px 10px 10px 10px;
}
#navbarSearch .search-category-radio {
  margin: 10px 0px;
}
#navbarSearch .custom-radio .custom-control-input:checked~.custom-control-label::before {
  background-color: var(--theme-color-primary)
}

/* responsive */
@media screen and (max-width: 768px) {
  #navbarSearch {
    position: relative;
  }
  #navbarSearch .navbar-search {
    display: block !important;
  }
  .navbar-container {
    display: block !important;
  }
  .navbar {
    border-bottom: 1px solid var(--light-border-color);
  }
  .navbar-brand-centered {
    top: 10px;
    left: calc(50% - 33px);
  }
  .menu-btn {
    border: none;
    padding: 0;
  }
  #logo {
    height: 26px;
  }
  .mims-nav-link {
    padding: 5px 0 !important;
  }
  .mims-nav-link.home-link {
    margin-left: 0 !important;
  }
  .left-links, .right-links {
    position: relative;
    left: 0;
    right: 0;
    display: inline-block;
    top: 10px;
  }
}

/* --------------------------------------------- */
/* bread crumb */
/* --------------------------------------------- */
.bread-crumb a {
  color: var(--theme-color-primary);
  font-size: var(--font-size-text);
  font-family: var(--font-regular);
}
/* ... */

